# err_span_check

./: Cargo.toml  Changelog.md  LICENSE-MIT  README.md  test.sh
.github/workflows/: test.yml
example/: Cargo.toml
example/src/: lib.rs
example/tests/fail/: missing_parameters.rs  wrong_type.rs
example/tests/fail/nightly/: subspans.rs  wrong_type.rs
example/tests/fail/stable/: subspans.rs  wrong_type.rs
src/: cargo.rs  dependencies.rs  env.rs  error.rs  expand.rs  features.rs  flock.rs  git.rs  inherit.rs  lib.rs  manifest.rs  message.rs  normalize.rs  path.rs  project.rs  run.rs  runner.rs  rustflags.rs  term.rs  test_case.rs  tests.rs
src/cargo/: output.rs
src/fail_dir/: case.rs  file.rs  mod.rs  walk.rs
src/manifest/: generated.rs  mod.rs  parsed.rs
src/message/: term.rs
src/normalize/: tests.rs
src/normalize/tests/: basic.rs  cargo_registry.rs  cargo_registry_sparse.rs  consteval.rs  dir_backslash.rs  dropshot_required_by.rs  erased_serde_trait_bound.rs  ghost_note_help.rs  multiline_note.rs  proc_macro_panic.rs  py03_url.rs  right_aligned_line_number.rs  rust_lib.rs  traits_must_be_implemented.rs  type_dir_backslash.rs  uniffi_out_dir.rs
src/tests/: rust-lib.rs  type-dir-backslash.rs
src/util/: env.rs  extensions.rs  features.rs  flock.rs
tests/: test.rs
tests/fail/: compile-fail-0.rs  compile-fail-0.stderr  compile-fail-1.rs  compile-fail-1.stderr  compile-fail-2.rs  compile-fail-3.rs  lifetime-error.rs  multiple-errors.rs  setup-code.rs  type-error.rs
tests/ui/: compile-fail-0.rs  compile-fail-3.stderr
