[package]
name = "err_span_check"
version = "0.1.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "Test harness for compiler errors with a focus on error spans"
repository = "https://github.com/mich101mich/err_span_check"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["testing", "dev-dependencies"]
categories = ["development-tools::testing"]
exclude = [
    "/.vscode",
    "/.gitignore",
    "/.github",
    "/*.bat",
    "/*.sh",
    "/todo.md",
    "/submodules",
    "/.gitmodules",
]

[dependencies]
glob = "0.3.0"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
target-triple = "1.0"
termcolor = "1.0.4"
thiserror = "2.0.18"
toml = "0.9.0"

[dev-dependencies]
automod = "1.0.10"
