[package]
name = "err_span_check"
version = "0.1.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "Test harness for compiler errors with a focus on error spans"
repository = "https://github.com/mich101mich/err_span_check"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["testing", "dev-dependencies"]
categories = ["development-tools::testing"]
exclude = [
    "/.vscode",
    "/.gitignore",
    "/.github",
    "/*.bat",
    "/*.sh",
    "/submodules",
    "/.gitmodules",
]

[dependencies]
anyhow = "1.0.101"
cargo_metadata = "0.23.1"
rustc_version = "0.4.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
target-triple = "1.0"
termcolor = "1.0.4"
toml = "0.9.8"
unicode-width = { version = "0.2.2", default-features = false }
walkdir = "2.5.0"
